adds host org to CCSF past event blurb

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="headerpane">
                 <center>
                 <h1>Bring open source to your campus.</h1>
-                <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">21 schools</a> have run this event, including 9 women-in-CS organizations. What about your school?</p>
+                <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">21 schools</a> have run this event, including 10 women-in-CS organizations. What about your school?</p>
                 <a type="button" class="btn btn-lg btn-primary" href="#signup" id="actsignup"><span class="glyphicon glyphicon-ok-sign"></span> Get started</a>
                 <a type="button" class="btn btn-lg btn-info" href="#learnmore"><span class="glyphicon glyphicon-question-sign"></span> Learn more</a>
 		<a type="button" class="btn btn-lg btn-primary" href="#upcoming"><span class="glyphicon glyphicon-calendar"></span> Events</a>
@@ -189,7 +189,7 @@ MY_NAME</p></pre>
 				<img src="./static/img/pe_ccsf2.jpg" class="img-thumbnail">
 				<h4>City College of San Francisco</h4>
 				<h4 class="date">March 22nd, 2014</h4>
-				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a> and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
+				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a>, <a href="http://www.ccsf.edu/wwc">Women Who Code CCSF</a>, and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
 				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
 	        	</div>
 			<div class="col-md-4">
