adds link to Rutgers blog post

--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@ MY_NAME</p></pre>
 				<h4 class="date">October 22nd, 2013</h4>
 				<p>Hosted by <a href="http://wcs.rutgers.edu/">Rutgers Women in Computer Science</a>.</p>
 				<a href="http://www.flickr.com/photos/paulproteus/sets/72157638428363123/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a> &nbsp;&nbsp;
-				<span class="glyphicon glyphicon-star-empty"></span>  Blog post coming soon!
-	        	</div>
+				<a href="http://openhatch.org/blog/2014/teaching-open-source-at-rutgers-university/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
+	        	
+                </div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_columbia.jpg" class="img-thumbnail">
 				<h4>Columbia University</h4>
