switched Oppia curated tasks link

--- a/projects.html
+++ b/projects.html
@@ -188,7 +188,7 @@ Installation Guide</a>
 <a href="https://code.google.com/p/oppia/"><span class="glyphicon glyphicon-thumbs-up"></span> Project Overview</a>
 					</div>
 					<div class="col-md-6 pb">
-<a href="https://code.google.com/p/oppia/issues/list?can=2&q=difficulty=Easy&sort=difficulty&colspec=ID%20Type%20Status%20Priority%20Difficulty%20Owner%20Summary"><span class="glyphicon glyphicon-thumbs-up"></span> Curated Tasks</a>
+<a href="https://docs.google.com/document/d/1FxlPRegrYb9q25UmxXafOEigS6qomPeXPP7g7Hc39Pw/pub"><span class="glyphicon glyphicon-thumbs-up"></span> Curated Tasks</a>
 					</div>
 				</div>
 				<div class="row no-space">
