updates past events, upcoming events sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="headerpane">
                 <center>
                 <h1>Bring open source to your campus.</h1>
-                <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">21 schools</a> have run this event, including 10 women-in-CS organizations. What about your school?</p>
+                <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">27 schools</a> have run this event, including 10 women-in-CS organizations. What about your school?</p>
                 <a type="button" class="btn btn-lg btn-primary" href="#signup" id="actsignup"><span class="glyphicon glyphicon-ok-sign"></span> Get started</a>
                 <a type="button" class="btn btn-lg btn-info" href="#learnmore"><span class="glyphicon glyphicon-question-sign"></span> Learn more</a>
 		<a type="button" class="btn btn-lg btn-primary" href="#upcoming"><span class="glyphicon glyphicon-calendar"></span> Events</a>
@@ -160,15 +160,7 @@ MY_NAME</p></pre>
 	<div class="row" id="upcoming">
 		<div class="col-md-8 col-md-offset-2">
 			<h1>Upcoming Events</h1>
-		<p>Please join us at the following events:</p>
-		<ul>
-		<li><a href="http://hackmason.org/openhatch/">Saturday, April 19th at George Mason University</a></li>
-		<li><a href="http://chicago.openhatch.org/">Saturday, April 26th at Northeastern Illinois University</a></li>
-		<li><a href="http://openhatch.mit.edu/">Saturday, April 26th and Sunday, April 27th at MIT</a></li>
-		<li>Saturday, May 3rd at Hartnell College</li>
-		<li>Saturday, May 10th at UC-Davis</li>
-		</ul>
-		<p>To attend, please contact us at hello@openhatch.org.</p>
+		<p>We are currently planning our event schedule for summer and fall of 2014.  Interested in running an event?  <a href="#signup">Contact us!</a></p>
 		</div>
 	</div>
 
@@ -186,6 +178,54 @@ MY_NAME</p></pre>
 
 	<div class="row">
 			<div class="col-md-4">
+				<img src="./static/img/pe_davis.jpg" class="img-thumbnail">
+				<h4>University of Califonia - Davis</h4>
+				<h4 class="date">May 10th, 2014</h4>
+				<p>Organized by the <a href="http://daviscsclub.org/">Davis Computer Science Club</a> and sponsored by <a href="http://www.rackspace.com/">Rackspace</a>.</p>
+				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+	        	</div>
+			<div class="col-md-4">
+				<img src="./static/img/pe_hartnell.jpg" class="img-thumbnail">
+				<h4>Hartnell College</h4>
+				<h4 class="date">May 3rd, 2014</h4>
+				<p>Organized by <a href="kcunningham@csumb.edu">Katie Cunningham</a>, Computer Science Education Coordinator for <a href="http://t.co/gMJXNE26au">CSIT-in-3</a>.</p>
+				<a href="https://www.dropbox.com/sh/wbfhkw2hoh1gf7g/AAAjxJGufO-IKbK9J6_-Ny6Ia"><span class="glyphicon glyphicon-picture"></span>  Pictures</a> &nbsp;&nbsp; <span class="glyphicon glyphicon-pencil"></span>  Blog post coming soon!</a>
+	        	</div>
+			<div class="col-md-4">
+				<img src="./static/img/pe_mit2.jpg" class="img-thumbnail">
+				<h4>Massachusetts Institute of Technology</h4>
+				<h4 class="date">April 26th and 27th, 2014</h4>
+				<p>Hosted by the <a href="http://sipb.mit.edu/">MIT Student Information Processing Board</a>.</p>
+				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog post coming soon!
+	        	</div>
+		</div>
+
+	<div class="row">
+			<div class="col-md-4">
+				<img src="./static/img/pe_neiu.jpg" class="img-thumbnail">
+				<h4>Northeastern Illinois University</h4>
+				<h4 class="date">April 26th, 2014</h4>
+				<p>Hosted by Rachel Adler, Francisco Iacobelli, and the NEIU Computer Science Club.</p>
+				<a href="http://media.chicagolug.org/u/chicagolug/collection/openhatch-at-neiu/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>
+	        	</div>
+			<div class="col-md-4">
+				<img src="./static/img/pe_stonybrook.jpg" class="img-thumbnail">
+				<h4>SUNY Stony Brook</h4>
+				<h4 class="date">April 24th, 2014</h4>
+				<p>Hosted by <a href="http://www.ceas.sunysb.edu/undergrad/Student%20Organizations/uc_sbcs.asp">Stony Brook Computing Society</a>.</p>
+				<a href="http://openhatch.org/blog/2014/short-event-big-impact-open-source-at-suny-stony-brook/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a> &nbsp;&nbsp; <span class="glyphicon glyphicon-star-empty"></span>  Pictures coming soon!
+	        	</div>
+			<div class="col-md-4">
+				<img src="./static/img/pe_gmu.jpg" class="img-thumbnail">
+				<h4>George Mason University</h4>
+				<h4 class="date">April 19th, 2014</h4>
+				<p>Hosted by <a href="http://gmulug.com/">MasonLUG</a>, <a href="http://srct.gmu.edu/">SRCT</a>.</p>
+				<a href="https://www.facebook.com/media/set/?set=a.558685994249975.1073741835.288369651281612"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>
+	        	</div>
+		</div>
+
+	<div class="row">
+			<div class="col-md-4">
 				<img src="./static/img/pe_ccsf2.jpg" class="img-thumbnail">
 				<h4>City College of San Francisco</h4>
 				<h4 class="date">March 22nd, 2014</h4>
@@ -197,14 +237,13 @@ MY_NAME</p></pre>
 				<h4>University of Massachusetts at Amherst</h4>
 				<h4 class="date">March 8th, 2014</h4>
 				<p>Hosted by <a href="http://sites.ieee.org/sb-umassa/">UMass IEEE</a>.</p>
-				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+				<a href="http://openhatch.org/blog/2014/teaching-open-source-at-umass-amherst/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>&nbsp;&nbsp; <span class="glyphicon glyphicon-star-empty"></span>  Pictures coming soon!
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_arizona.jpg" class="img-thumbnail">
 				<h4>University of Arizona</h4>
 				<h4 class="date">February 8th, 2014</h4>
 				<p>Hosted by UA's <a href="http://uofa-acm.github.io/">ACM Chapter</a>, <a href="https://www.cs.arizona.edu/wics/">WiCS Chapter</a> and <a href="http://uagamedev.blogspot.com/">Video Game Developers Club</a>.</p>
-				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
 	        	</div>
 		</div>
 
@@ -214,7 +253,7 @@ MY_NAME</p></pre>
 				<h4>Princeton University</h4>
 				<h4 class="date">November 24th, 2013</h4>
 				<p>Hosted by <a href="http://princetonwics.wordpress.com/">Princeton Women in Computer Science</a>.</p>
-				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+				<a href="http://openhatch.org/blog/2014/open-source-comes-to-princeton/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_rutgers.jpg" class="img-thumbnail">
