changed reference to Davis for consistency

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ MY_NAME</p></pre>
 	<div class="row">
 			<div class="col-md-4">
 				<img src="./static/img/pe_davis.jpg" class="img-thumbnail">
-				<h4>University of Califonia - Davis</h4>
+				<h4>University of Califonia at Davis</h4>
 				<h4 class="date">May 10th, 2014</h4>
 				<p>Organized by the <a href="http://daviscsclub.org/">Davis Computer Science Club</a> and sponsored by <a href="http://www.rackspace.com/">Rackspace</a>.</p>
 				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
