Update pictures/blog posts

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ MY_NAME</p></pre>
 				<h4>University of Califonia at Davis</h4>
 				<h4 class="date">May 10th, 2014</h4>
 				<p>Organized by the <a href="http://daviscsclub.org/">Davis Computer Science Club</a> and sponsored by <a href="http://www.rackspace.com/">Rackspace</a>.</p>
-				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+				<a href="http://imgur.com/a/AevNh"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>	&nbsp;&nbsp; <a href="http://openhatch.org/blog/2014/teaching-open-source-at-uc-davis/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>		
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_hartnell.jpg" class="img-thumbnail">
@@ -196,7 +196,7 @@ MY_NAME</p></pre>
 				<h4>Massachusetts Institute of Technology</h4>
 				<h4 class="date">April 26th and 27th, 2014</h4>
 				<p>Hosted by the <a href="http://sipb.mit.edu/">MIT Student Information Processing Board</a>.</p>
-				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog post coming soon!
+				<a href="https://www.flickr.com/photos/paulproteus/sets/72157644782270554/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>	
 	        	</div>
 		</div>
 
@@ -213,7 +213,7 @@ MY_NAME</p></pre>
 				<h4>SUNY Stony Brook</h4>
 				<h4 class="date">April 24th, 2014</h4>
 				<p>Hosted by <a href="http://www.ceas.sunysb.edu/undergrad/Student%20Organizations/uc_sbcs.asp">Stony Brook Computing Society</a>.</p>
-				<a href="http://openhatch.org/blog/2014/short-event-big-impact-open-source-at-suny-stony-brook/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a> &nbsp;&nbsp; <span class="glyphicon glyphicon-star-empty"></span>  Pictures coming soon!
+				<a href="http://openhatch.org/blog/2014/short-event-big-impact-open-source-at-suny-stony-brook/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a> &nbsp;&nbsp; <a href="https://www.flickr.com/photos/paulproteus/sets/72157644782239044/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_gmu.jpg" class="img-thumbnail">
@@ -230,14 +230,14 @@ MY_NAME</p></pre>
 				<h4>City College of San Francisco</h4>
 				<h4 class="date">March 22nd, 2014</h4>
 				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a>, <a href="http://www.ccsf.edu/wwc">Women Who Code CCSF</a>, and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
-				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+				<a href="https://www.flickr.com/photos/paulproteus/sets/72157644769790722/"><span class="glyphicon glyphicon-star-empty"></span> Pictures</a>
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_umass2.jpg" class="img-thumbnail">
 				<h4>University of Massachusetts at Amherst</h4>
 				<h4 class="date">March 8th, 2014</h4>
 				<p>Hosted by <a href="http://sites.ieee.org/sb-umassa/">UMass IEEE</a>.</p>
-				<a href="http://openhatch.org/blog/2014/teaching-open-source-at-umass-amherst/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>&nbsp;&nbsp; <span class="glyphicon glyphicon-star-empty"></span>  Pictures coming soon!
+				<a href="http://openhatch.org/blog/2014/teaching-open-source-at-umass-amherst/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>&nbsp;&nbsp; <a href="https://www.flickr.com/photos/paulproteus/sets/72157644368100338/"><span class="glyphicon glyphicon-star-empty"></span> Pictures</a>
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_arizona.jpg" class="img-thumbnail">
