Update events for fall 2014

--- a/index.html
+++ b/index.html
@@ -163,7 +163,16 @@ MY_NAME</p></pre>
 	<div class="row" id="upcoming">
 		<div class="col-md-8 col-md-offset-2">
 			<h1>Upcoming Events</h1>
-		<p>We are currently planning our event schedule for summer and fall of 2014.  Interested in running an event?  <a href="#signup">Contact us!</a></p>
+			<ul>
+			<li>University of Minnesota at Morris (Morris, MA) on Saturday, September 13th</li>
+			<li>City College of San Francisco (San Francisco, CA) on Saturday, September 13th</li>
+			<li>DePaul University (Chicago, IL) on Saturday, October 18th</li>
+			<li>Bucknell University (Lewisburg, PA) on Saturday, October 18th</li>
+			<li>University of Victoria (Victoria, BC, Canada) on Saturday, October 18th</li>
+			<li>Hartnell College (Salinas, CA) on Saturday, November 15th</li>
+			<li>University of Washington (Seattle, CA) on Saturday, November 15th</li>
+			</ul>
+		<p>We are currently planning our event schedule for fall of 2014, with several more unconfirmed events not listed above.  Interested in running an event?  <a href="#signup">Contact us!</a></p>
 		</div>
 	</div>
 
