--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ MY_NAME</p></pre>
 		<div class="col-md-8 col-md-offset-2">
 			<h1>Upcoming Events</h1>
 			<ul>
-			<li>University of Minnesota at Morris (Morris, MA) on Saturday, September 13th</li>
+			<li>University of Minnesota at Morris (Morris, MN) on Saturday, September 13th</li>
 			<li>City College of San Francisco (San Francisco, CA) on Saturday, September 13th</li>
 			<li>DePaul University (Chicago, IL) on Saturday, October 18th</li>
 			<li>Bucknell University (Lewisburg, PA) on Saturday, October 18th</li>
