Update upcoming events

--- a/index.html
+++ b/index.html
@@ -164,15 +164,21 @@ MY_NAME</p></pre>
 		<div class="col-md-8 col-md-offset-2">
 			<h1>Upcoming Events</h1>
 			<ul>
-			<li>University of Minnesota at Morris (Morris, MN) on Saturday, September 13th</li>
-			<li>City College of San Francisco (San Francisco, CA) on Saturday, September 13th</li>
-			<li>DePaul University (Chicago, IL) on Saturday, October 18th</li>
-			<li>Bucknell University (Lewisburg, PA) on Saturday, October 18th</li>
-			<li>University of Victoria (Victoria, BC, Canada) on Saturday, October 18th</li>
-			<li>Hartnell College (Salinas, CA) on Saturday, November 15th</li>
-			<li>University of Washington (Seattle, CA) on Saturday, November 15th</li>
+			<li>Hartnell College (Salinas, CA - near SF Bay) on Saturday, November 15th</li>
+			<li>Indiana University at Bloomington on Saturday, November 15th (<a href="http://iub.openhatch.org/">Event Website</a>)</li>
+			<li>Columbia University (NY, NY) on Saturday, November 15th</li>
+			<li>Cornell University (Ithaca, NY) on Saturday, November 15th</li>
+			<li>Swarthmore College (Swarthmore, PA - near Philadelphia) on Saturday, November 15th</li>
+			<li>University of Washington (Seattle, CA) on Sunday, November 16th (<a href="http://washington.openhatch.org/">Event Website</a>)</li>
+			<li>SUNY Stony Brook (Long Island, NY) on Sunday, November 16th</li>
+			<li>Purdue University (Lafayette, IN) on Sunday, November 16th (<a href="http://purdue.openhatch.org/">Event Website</a>)</li>
+			<li>UC Berkeley (Berkeley, CA) on Sunday, November 16th (<a href="http://berkeley.openhatch.org/">Event Website</a>)</li>
+			<li>Baruch College CUNY (NY, NY) on Tuesday, November 18th</li>
+			<li>Per Scholas (Bronx, NY) on Wednesday, November 19th</li>
+			<li>Princeton University (Princeton, NJ) on Sunday, November 22nd</li>
 			</ul>
-		<p>We are currently planning our event schedule for fall of 2014, with several more unconfirmed events not listed above.  Interested in running an event?  <a href="#signup">Contact us!</a></p>
+		
+		<p>Interested in running an event?  <a href="#signup">Contact us!</a></p>
 		</div>
 	</div>
 
