Fixed details for the upcoming Princeton event.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ MY_NAME</p></pre>
 			<li>UC Berkeley (Berkeley, CA) on Sunday, November 16th (<a href="http://berkeley.openhatch.org/">Event Website</a>)</li>
 			<li>Baruch College CUNY (NY, NY) on Tuesday, November 18th</li>
 			<li>Per Scholas (Bronx, NY) on Wednesday, November 19th</li>
-			<li>Princeton University (Princeton, NJ) on Sunday, November 22nd</li>
+			<li>Princeton University (Princeton, NJ) on Saturday, November 22nd (<a href="http://princeton.openhatch.org/">Event Website</a>)</li>
 			</ul>
 		
 		<p>Interested in running an event?  <a href="#signup">Contact us!</a></p>
