Add images for Princeton & PerScholas

--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@ MY_NAME</p></pre>
 	
 	<div class="row">
 			<div class="col-md-4 col-md-offset-2">
-				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_princeton2.jpg" class="img-thumbnail">
 				<h4>Princeton University</h4>
 				<h4 class="date">November 22nd, 2014</h4>
 				<p>Organized by <a href="http://opensourceatprinceton.com/">Open Source at Princeton</a>, sponsored by <a href="http://www.twosigma.com/">Two Sigma</a>.</p>
 	        </div>
 			<div class="col-md-4">
-				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_perscholas.jpg" class="img-thumbnail">
 				<h4>Per Scholas</h4>
 				<h4 class="date">November 19th, 2014</h4>
 	        </div>
