Fix div, remove incorrect sponsor info

--- a/index.html
+++ b/index.html
@@ -507,7 +507,6 @@ href="https://opensource.com/life/10/11/introducing-students-world-open-source-d
  <div class="col-md-8 col-md-offset-2">
   <h1>Sponsors</h1>
   <p>Open Source Comes to Campus is funded through generous donations from individuals and companies.  Our thanks to Patron level sponsors <b>MongoDB</b>, <b>Stripe</b>, and Snabb, and to Bronze level sponsor <b>Puppet Labs</b>.</p>
-  <p>Additionally, we have ongoing relationships with <b>GitHub</b> to sponsor food costs for events, and with <b>Google</b> to support the organization and sponsor some travel costs for events.</p>
  </div>
 </div>
 
@@ -532,6 +531,7 @@ href="https://opensource.com/life/10/11/introducing-students-world-open-source-d
  <div class="col-md-2 col-md-offset-1">
   <img src="./static/img/github.png" class="img-responsive">
  </div>
+</div>
 </div>
 
 <div id="sponsorship" class="container">
